--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           href="#"
           target="_self"
           title="Em andamento"
+          aria-label="Leva para o portfólio de Ícaro Machado"
         >
           <svg
             class="w-[25px] h-[25px] absolute top-1/2 left-[30px] -translate-x-1/2 -translate-y-1/2 transition delay-50 duration-200 ease-in-out md:left-[50px] group-hover:fill-white"
@@ -69,6 +70,7 @@
           class="block bg-neutral-50 w-full p-4 rounded-lg drop-shadow-xl text-center transition delay-50 duration-200 ease-in-out relative group hover:-translate-y-1 hover:scale-105 hover:bg-blue-500 active:scale-105 focus:bg-blue-500 focus-within:fill-white focus-within:text-white"
           href="https://github.com/IcaroMachadoCarvalho"
           target="_self"
+          aria-label="Leva para o Github de Ícaro Machado "
         >
           <svg
             class="w-[25px] h-[25px] absolute top-1/2 left-[30px] -translate-x-1/2 -translate-y-1/2 transition delay-50 duration-200 ease-in-out md:left-[50px] group-hover:fill-white "
@@ -89,6 +91,7 @@
           class="block bg-neutral-50 w-full p-4 rounded-lg drop-shadow-xl text-center transition delay-50 duration-200 ease-in-out relative group hover:-translate-y-1 hover:scale-105 hover:bg-blue-500 active:scale-105 focus:bg-blue-500 focus-within:fill-white focus-within:text-white"
           href="./docs/#"
           download="../docs/Ícaro Machado de Carvalho 2025.pdf"
+          aria-label="Baixa o currículo de Ícaro Machado "
         >
           <svg
             class="w-[25px] h-[25px] absolute top-1/2 left-[30px] -translate-x-1/2 -translate-y-1/2 transition delay-50 duration-200 ease-in-out md:left-[50px] group-hover:fill-white active:fill-white"
@@ -115,6 +118,7 @@
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 512 512"
             alt="Ícone de Email"
+            aria-label="Leva para escrever email para Ícaro Machado"
           >
             <path
               d="M64 112c-8.8 0-16 7.2-16 16l0 22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1l0-22.1c0-8.8-7.2-16-16-16L64 112zM48 212.2L48 384c0 8.8 7.2 16 16 16l384 0c8.8 0 16-7.2 16-16l0-171.8L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64l384 0c35.3 0 64 28.7 64 64l0 256c0 35.3-28.7 64-64 64L64 448c-35.3 0-64-28.7-64-64L0 128z"
@@ -124,6 +128,7 @@
         <a
           href="https://www.linkedin.com/in/%C3%ADcaromachadodecarvalho/"
           target="_self"
+          aria-label="Leva para o perfil de Ícaro Machado no LinkedIn"
         >
           <svg
             class="w-[15px] h-[15px] transition delay-50 duration-200 hover:fill-blue-500 hover:scale-105 hover:scale-105 active:scale-105 active:fill-blue-500 md:w-[20px] h-[20px]"
