feat:Adicionar link portfolio

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       >
         <a
           class="block bg-neutral-50 w-full p-4 rounded-lg drop-shadow-xl text-center transition delay-50 duration-200 ease-in-out relative group hover:-translate-y-1 hover:scale-105 hover:bg-blue-500 active:scale-105 focus:bg-blue-500 focus-within:fill-white focus-within:text-white"
-          href="#"
+          href="https://icaromachado.vercel.app/"
           target="_self"
           title="Em andamento"
           aria-label="Leva para o portfólio de Ícaro Machado"
